center interface for desktop

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ canvas{
 <div class="col-lg-8"></div>
 </div-->
   <div class="row" >
+  <div class="col-lg-3"></div>
     <div class="col-lg-1">
         <input id="vocals_slider" type="text" class="fader"
           data-slider-min="0" 
@@ -172,6 +173,7 @@ canvas{
   <br/><br/><br/>
   </div>
     <div class="row" id="track_selection">
+    <div class="col-lg-3"></div>
     <div class="col-lg-2">
         <div class="dropdown">
           <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -201,6 +203,7 @@ canvas{
     </div>
   </div>
   <div class="row" style="height:100px;padding:20px" id="loading">
+  <div class="col-lg-3"></div>
     <div class="throbber-loader">
   Loading...
 </div> &nbsp;&nbsp; Loading separation models
